Fixing some minor bugs with the wrap and postcss missing from watch task

--- a/src/components/_blog.scss
+++ b/src/components/_blog.scss
@@ -32,3 +32,20 @@ img.avatar {
 	vertical-align: middle;
 
 }
+
+body.blog article {
+	
+	padding-bottom: $gutter_y;
+	padding-top: $gutter_y;
+
+	> * {
+
+		margin-left: auto;
+		margin-right: auto;
+		max-width: 1170px;
+		padding-left: $gutter_x;
+		padding-right: $gutter_x;
+
+	}
+
+}
