--- a/src/components/_default.scss
+++ b/src/components/_default.scss
@@ -1,4 +1,4 @@
-* {
+*, *:before, *:after {
 
 	position: relative;
 	box-sizing: border-box;
