--- a/src/components/_hero.scss
+++ b/src/components/_hero.scss
@@ -56,7 +56,7 @@ body.home #after-header-widgets {
 }
 
 body.page:not(.home) .entry-header, body.archive .page-header, body.single-post .entry-header {
-	
+
 	padding: 100px $gutter_x 50px;
 	background-image: $hero;
 	background-size: cover;
@@ -73,6 +73,12 @@ body.page:not(.home) .entry-header, body.archive .page-header, body.single-post 
 	    height: 100%;
 	    background: rgba(0,0,50,0.3);
 	
+	}
+
+	> * {
+
+		@extend .wrap;
+
 	}
 
 	.entry-title {
@@ -102,8 +108,11 @@ body.blog {
 		&:after {
 
 			@extend h3;
+
+			@extend .wrap;
 			
 			content: "Latest News";
+			display: block;
 			position: relative;
 			z-index: 2;
 			
